--- a/opisEBAY.html
+++ b/opisEBAY.html
@@ -101,7 +101,7 @@
         </div>
       </nav>
       <div class="row my-5 justify-content-center">
-        <div class="col-lg-8 artpic">
+        <div class="col-lg-12 artpic">
           <div class="artikelbilder galerie">
             <input
               name="switch"
@@ -765,7 +765,7 @@
     </div>
 
     <div class="container p-4">
-      <div class="row mt-5 py-5 footer">
+      <div class="row pb-4 footer">
         <div class="col-sm-3">
           <h1 class="mb-3">Links</h1>
           <ul>
